tests/lean/689.lean.expected.out
689.lean:1:29: error: unnecessary tactic was provided, placeholder was automatically synthesized by the elaborator
