tests/lean/689.lean
check @eq (begin exact empty end) unit.star
